# example-streamlit

./: Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
models/: titanic_model.pkl
src/: main.py
src/example_streamlit/: __init__.py
